# VaiFura

./: .gitignore  CMakeLists.txt  DrillTreeViewDelegate.qml  Main.qml  Preview.qml  VaiFura.rc  VaiFuraSingleton.cpp  VaiFuraSingleton.h  main.cpp  settings.json
VaiFura/Core/: AbstractExporter.cpp  AbstractExporter.h  CMakeLists.txt  DrillDocument.cpp  DrillDocument.h  DrillDocumentBuilder.cpp  DrillDocumentBuilder.h  DrillDocumentExportPreparer.cpp  DrillDocumentExportPreparer.h  DrillExporter.h  DrillHelper.h  DrillNode.cpp  DrillNode.h  DrillParser.h  DrillTransform.cpp  DrillTransform.h  ExportSettings.h  ExportSettingsRepository.cpp  ExportSettingsRepository.h  Settings.cpp  Settings.h  SettingsReader.h  SettingsRepository.cpp  SettingsRepository.h
VaiFura/Exporter/GCode/: CMakeLists.txt  GCodeExporter.cpp  GCodeExporter.h
VaiFura/Model/: AbstractToolHoleListModel.h  CMakeLists.txt  DrillDocumentModel.cpp  DrillDocumentModel.h  DrillTransformModel.cpp  DrillTransformModel.h  DrillTreeModel.cpp  DrillTreeModel.h  ExportSettingsListModel.cpp  ExportSettingsListModel.h  HoleListModel.h  SettingsListModel.cpp  SettingsListModel.h  ToolListModel.h
VaiFura/Parser/Excellon/: CMakeLists.txt  ExcellonDrillParser.cpp  ExcellonDrillParser.h  ExcellonLexer.cpp  ExcellonLexer.h  ExcellonModel.cpp  ExcellonToken.h  ExcellonTypes.h
VaiFura/Preview/: CMakeLists.txt  DrillDocumentPreviewQuickItem.cpp  DrillDocumentPreviewQuickItem.h  DrillHelper.h  DrillRenderer.cpp  DrillRenderer.h  DrillRendererBase.cpp  DrillRendererBase.h  DrillRendererHelper.h  GridRenderer.cpp  InteractionController.cpp  InteractionController.h  OriginRenderer.cpp  OriginRenderer.h  SnapEngine.cpp  SnapEngine.h  SnapPreviewRenderer.h  ViewportTransform.cpp  ViewportTransform.h
VaiFura/Ui/: CMakeLists.txt  PageDrills.qml  PageExport.qml  PageOffset.qml  PageSettings.qml  PageUpload.qml  Preview.qml
VaiFura/Ui/Components/: DrillTreeViewDelegate.qml  HelpToolTip.qml  IconButton.qml  NumberTextField.qml  PageHeader.qml  PageLayout.qml  Preview.qml  ScrollablePage.qml  SettingsBaseDelegate.qml  SettingsBooleanDelegate.qml  SettingsItem.qml  SettingsNumberDelegate.qml  UnitTextField.qml
VaiFura/Ui/MaterialIcons/: MaterialIcons.qml
VaiFura/Ui/MaterialSymbols/: MaterialSymbols.qml
libcore/: AbstractDrillParser.h  CMakeLists.txt  DrillBuilder.h  DrillDocument.cpp  DrillDocument.h  DrillDocumentBuilder.h  DrillModel.h  DrillTreeDocument.cpp  DrillTreeDocument.h  DrillTreeDocumentBuilder.cpp  DrillTreeDocumentBuilder.h  DrillTreeNode.cpp  DrillTreeNode.h  VaiFuraTypes.h
libexcellon/: CMakeLists.txt  ExcellonLexer.h  ExcellonModel.h  ExcellonParser.cpp  ExcellonParser.h  ExcellonToken.h
libmodel/: AbstractDrillListModel.h  AbstractToolHoleListModel.h  CMakeLists.txt  DrillDocument.cpp  DrillDocument.h  DrillDocumentModel.cpp  DrillDocumentModel.h  DrillListModel.cpp  DrillListModel.h  DrillTreeItem.cpp  DrillTreeItem.h  DrillTreeModel.cpp  DrillTreeModel.h  HoleListModel.cpp  ToolListModel.cpp  ToolListModel.h
libview/: CMakeLists.txt  DrillDocumentPreviewQuickItem.cpp  DrillDocumentPreviewQuickItem.h  DrillRendererBase.cpp  GridRenderer.cpp  GridRenderer.h  InteractionController.cpp  InteractionController.h  OriginRenderer.cpp  OriginRenderer.h  ViewportTransform.cpp
